# oro_ws

./: .gitmodules  com_update copy.py  com_update.py  update.py
.github/workflows/: component-update.yaml
src/bot_description_world/: README.md
src/bot_description_world/bot_control/: CMakeLists.txt  package.xml
src/bot_description_world/bot_control/bot_control/: reading_laser.py
src/bot_description_world/bot_control/launch/: bot_control_launch.py
src/bot_description_world/bot_control/scripts/: move.py
src/bot_description_world/bot_description/: CMakeLists.txt  package.xml
src/bot_description_world/bot_description/config/: controller_manager_config.yaml
src/bot_description_world/bot_description/launch/: rsp_launch.py  rviz2_launch.py  spawn_launch.py
src/bot_description_world/bot_description/src/: python.py
src/bot_description_world/bot_description/urdf/: camera.xacro  lidar.xacro  robot_core.xacro  robot_urdf.xacro  ros2_control.xacro
src/bot_description_world/bot_world/: CMakeLists.txt  package.xml  python.py  txt
src/bot_description_world/bot_world/launch/: simulation_launch.py
src/bot_description_world/bot_world/worlds/: jayaraju_.world
src/bot_description_world/bot_world/worlds/example_world/: model.config  model.sdf
